--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">News</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="loading">Loading...</string>
+    <string name="remove_from_list">Remove from my list</string>
+    <string name="add_to_list">Add to my list</string>
 </resources>
